--- a/package.json
+++ b/package.json
@@ -14,13 +14,16 @@
     "@radix-ui/react-slot": "^1.2.4",
     "@react-three/drei": "^10.7.7",
     "@react-three/fiber": "^9.5.0",
+    "@react-three/postprocessing": "^3.0.4",
     "@types/three": "^0.182.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "cobe": "^0.6.5",
     "framer-motion": "^12.29.0",
     "gsap": "^3.14.2",
     "lenis": "^1.3.17",
     "lucide-react": "^0.563.0",
+    "motion": "^12.29.0",
     "next": "16.1.4",
     "react": "19.2.3",
     "react-dom": "19.2.3",
