--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "next": "16.1.4",
     "react": "19.2.3",
     "react-dom": "19.2.3",
+    "split-type": "^0.3.4",
     "tailwind-merge": "^3.4.0",
     "three": "^0.182.0",
     "vaul": "^1.1.2"
